--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "strapi-plugin-content-manager": "3.6.2",
     "strapi-plugin-content-type-builder": "3.6.2",
     "strapi-plugin-email": "3.6.2",
+    "strapi-plugin-graphql": "^3.6.2",
     "strapi-plugin-i18n": "3.6.2",
     "strapi-plugin-upload": "3.6.2",
     "strapi-plugin-users-permissions": "3.6.2",
+    "strapi-provider-upload-aws-s3": "^3.6.2",
     "strapi-utils": "3.6.2"
   },
   "author": {
