--- a/api/homebanner/models/homebanner.settings.json
+++ b/api/homebanner/models/homebanner.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "homebanners",
   "info": {
-    "name": "homebanner"
+    "name": "homebanner",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -11,8 +12,21 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "Title": {
-      "type": "text"
+    "title": {
+      "type": "richtext"
+    },
+    "intro": {
+      "type": "richtext"
+    },
+    "image": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
