--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.13.0",
     "knex": "0.21.18",
     "pg": "^8.6.0",
     "pg-connection-string": "^2.5.0",
