--- a/api/home-content/models/home-content.settings.json
+++ b/api/home-content/models/home-content.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "home_contents",
   "info": {
-    "name": "Home Content"
+    "name": "Home Content",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -14,7 +15,9 @@
     "Content": {
       "type": "dynamiczone",
       "components": [
-        "content.tekst-media"
+        "content.tekst-media",
+        "content.usp",
+        "content.cta"
       ]
     }
   }
